# warroom

./: .dockerignore  .env.example  .gitignore  BAND_TIER_LIMITATION.md  Dockerfile  PHASE_1_SMOKE_TEST.md  PHASE_4_PROTOCOL_TEST.md  README.md  TEST_RESULTS_OPTION_B.md  agent_config.yaml.example  docker-compose.yml  nextSteps.md  other llm solutions.md  pyproject.toml  warroom-implementation-plan.md
agents/commander/: main.py  prompt.md  tools.py
agents/compliance/: main.py  prompt.md  tools.py
agents/threat_intel/: main.py  prompt.md  tools.py
agents/triage/: main.py  prompt.md  tools.py
demo/: demo_script.md
docs/: recovery.md
exporter/: export_report.py
injector/: inject_alert.py
quickstart/: my_agent.py
scripts/: clean_rooms.py  export_report.py  export_transcript.py  incident_driver.py  run_all.ps1
shared/: band_logging.py  config.py  logging.py  mock_data.py  protocol.md  reg_clock.py  sample_message.json  schemas.py  sdk_patches.py
shared/mock_env/: asset_inventory.json  ioc_db.json  reg_rules.json
shared/mock_env/alerts/: INC-A-malware-clean.json  INC-B-false-positive.json  INC-C-ransomware-pii.json
tests/: test_export_report.py  test_incident_driver.py  test_option_b.py  test_option_b_integration.py  test_reg_clock.py  test_schemas.py  test_sdk_patches.py  test_tools.py
